# satyadrishti

./: .gitignore  AUDIO_DETECTION_V2_BLUEPRINT.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile.gateway  PRODUCTION_PLAN.md  PROJECT_CONTEXT.md  README.md  ZERO_COST_ARCHITECTURE_PITCH.md  alembic.ini  pyproject.toml  redevelopment_from_scratch.md  render.yaml  requirements-gateway.txt  requirements-inference.txt  requirements-server.txt  run_audio_test.py  start-backend.sh
alembic/: env.py
configs/: audio_config.yaml  finetune_diffusion.yaml  fusion_config.yaml  text_config.yaml  train_deepfake.yaml  train_deepfake_vit.yaml  train_vit_modern.yaml  train_vit_v2.yaml  train_vit_v2_local.yaml  video_config.yaml
engine/: __init__.py
frontend/: .env.example  UI_DESIGN_PROMPT.md  index.html  package-lock.json  package.json  satyadrishtifrontendsrcpagesstitch_dashboard.html  tailwind.config.ts  tsconfig.tsbuildinfo
hf_inference/: Dockerfile  README.md  app.py
monitoring/: README.md  alerts.yml  grafana_dashboard.json  prometheus.yml
scripts/: README.md  calibrate_model.py  download_asvspoof.py  download_asvspoof_hf.py  download_diffusion_data.py  download_faceforensics.py  download_ff_official.py  download_image_forensics_data.py  eval_text.py  export_onnx.py  extract_real_audio_embeddings.py  generate_coercion_dataset.py  prepare_dataset.py  prepare_diffusion_manifest.py  prepare_image_forensics_manifest.py  preprocess_all_videos.py  preprocess_ff_videos.py  test_detector3.txt  test_detector3_output.txt  test_detector4_output.txt  test_detector6_output.txt  test_detector7_output.txt  train_audio.py  train_clip_probe.py  train_deepfake_detector.py  train_deepfake_vit.py  train_fusion.py  train_fusion_real.py  train_text.py  train_video_combined.py  train_video_spatial.py  train_video_spatial_v2.py  train_video_temporal.py  (+2 more)
(+165 files in other folders)
